deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: galaxy-digital
  namespace: galaxy-digital-web
  labels:
    app: galaxy-digital
spec:
  selector:
    app: galaxy-digital
  ports:
    - name: http
      port: 8080
      targetPort: 8080
